# embed-plist-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: Info.plist  launchd.plist  lib.rs
tests/: section_contents.rs
